Fix page being completely broken on small viewports

--- a/src/global.css
+++ b/src/global.css
@@ -44,7 +44,6 @@ body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 }
 
 input, button, select {
